--- a/fixtures/fixture.html
+++ b/fixtures/fixture.html
@@ -1,2 +1,3 @@
-<!-- @ToDo: 1 This is a high priority ToDo in a HTML file -->
-<!-- @ToDo: 3 This is a low priority ToDo in a HTML file -->
+<!-- @TODO: 1 HTML This is a high priority TODO in file -->
+<!-- TODO: 2 HTML This is a medium priority TODO in  file -->
+<!-- @TODO: 3 HTML This is a low priority TODO in file -->
