Add test for HTML

--- a/fixtures/fixture.html
+++ b/fixtures/fixture.html
@@ -1,3 +1,4 @@
-<!-- @TODO: 1 HTML This is a high priority TODO in file -->
-<!-- TODO: 2 HTML This is a medium priority TODO in  file -->
-<!-- @TODO: 3 HTML This is a low priority TODO in file -->
+<!-- @TODO: HTML This is an unclassified priority task -->
+<!-- @TODO: 1 HTML This is a high priority task -->
+<!-- TODO: 2 HTML This is a medium priority task -->
+<!-- @TODO: 3 HTML This is a low priority task -->
