--- a/fixtures/fixture.html
+++ b/fixtures/fixture.html
@@ -1,4 +1,4 @@
-<!-- @TODO: HTML This is an unclassified priority task -->
-<!-- @TODO: 1 HTML This is a high priority task -->
-<!-- TODO: 2 HTML This is a medium priority task -->
-<!-- @TODO: 3 HTML This is a low priority task -->
+<!-- @TODO: html This is an unclassified priority task -->
+<!-- @TODO: 1 html This is a high priority task -->
+<!-- TODO: 2 html This is a medium priority task -->
+<!-- @TODO: 3 html This is a low priority task -->
